# cursebook

./: .gitignore  CMakeLists.txt  README.md  config.h  console.c  console.h  fb.c  fb.h  input.c  input.h  login.h  main.c  pi.c  pi.h  thread.c  thread.h  types.c  types.h  ui.c  ui.h
devtools/: checkmemory.sh  checkthreads.sh
